welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:34: error: ')' expected but integer literal found.
    for (j <- in 0 to 2){
                 ^MethodsPicture:38: error: illegal start of simple expression
  }
  ^